--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-minify": "^0.3.0",
     "chai": "^4.1.2",
     "cross-env": "^5.1.3",
@@ -50,6 +51,7 @@
     "eslint-config-google": "^0.9.1",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
+    "eslint-plugin-mocha": "^5.0.0",
     "eslint-plugin-react": "^7.4.0",
     "istanbul": "^1.0.0-alpha",
     "mocha": "^5.0.0",
